--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      CI: false  # This prevents treating warnings as errors
     steps:
       - name: Checkout
         uses: actions/checkout@v4
