--- a/netlify.toml
+++ b/netlify.toml
@@ -24,7 +24,7 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://eu.i.posthog.com https://*-assets.i.posthog.com; connect-src 'self' https://eu.i.posthog.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline';"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://eu.i.posthog.com https://eu-assets.i.posthog.com; connect-src 'self' https://eu.i.posthog.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline';"
 
 [[headers]]
   for = "/static/css/*"
