--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.8",
     "chartjs-plugin-annotation": "^3.1.0",
+    "katex": "^0.16.22",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-katex": "^3.1.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.0",
     "web-vitals": "^2.1.4"
