--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,11 @@ on:
   push:
   pull_request:
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   test:
     name: Run Tests
@@ -48,13 +53,18 @@ jobs:
         fi
 
     - name: Comment PR with test results
-      if: github.event_name == 'pull_request'
+      if: github.event_name == 'pull_request' && !github.event.pull_request.head.repo.fork
       uses: actions/github-script@v7
       with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: '✅ All tests are passing! 🎉'
-          }) 
+          try {
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '✅ All tests are passing! 🎉'
+            });
+          } catch (error) {
+            console.log('Could not create PR comment:', error.message);
+          } 
