--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-plot": "python3 scripts/generate-plot.py"
   },
   "eslintConfig": {
     "extends": [
