--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-katex": "^3.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.0",
     "web-vitals": "^2.1.4"
   },
@@ -48,6 +48,15 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.31"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
+    "http-proxy-middleware": "^2.0.9",
+    "webpack-dev-server": "^5.2.1",
+    "brace-expansion": "^2.0.2",
+    "on-headers": "^1.1.0",
+    "form-data": "^3.0.4"
   }
 }
